<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Discount Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tvTitle">Discount Calculator</string>
    <string name="tvListedPrice"><b>Listed Price</b></string>
    <string name="etLPHint">Enter Listed Price</string>
    <string name="tvDiscount"><b>Discount%</b></string>
    <string name="rd10">10</string>
    <string name="rd25">25</string>
    <string name="rd50">50</string>
    <string name="rdCustom">Custom</string>
    <string name="tvCustom"><b>Custom</b></string>
    <string name="tvProgress">25%</string>
    <string name="tvSave"><b>You Saved</b></string>
    <string name="tvSaveAmount"></string>
    <string name="tvPay"><b>You Pay</b></string>
    <string name="tvPayAmount"></string>
    <string name="btnExit">Exit</string>
    <string name="tvTest"></string>

</resources>
